# time-tui

./: .gitignore  README.md  models.py  pyproject.toml  storage.py  tasks.md
.todo/Backend/: tasks.md
docs/: known-issues.md  mcp-config.md
docs/plans/: 2026-07-17-fullscreen-calendar.md  2026-07-21-cli-adapter.md  2026-07-22-gnome-extension.md
extensions/timetui-topbar/: README.md  extension.js  install.sh  metadata.json
scripts/: css_check_report.sh  validate_css.py
todo/: app.py  cli.py  mcp_server.py  storage.py  tasks.md  tui.py
todo/cli/: __init__.py  __main__.py  calendar.py  main.py  migrate.py  sessions.py  tasks.py
todo/core/: calendar_parser.py  dashboard_io.py  dbus_service.py  models.py  notify.py  parser.py  sessions_parser.py  storage.py
todo/tests/: test_calendar_parser.py  test_cascade_delete.py  test_cascade_delete_integration.py  test_cli_integration.py  test_collapse_filter.py  test_css.py  test_dashboard_io.py  test_dashboard_navigation.py  test_dashboard_tracker.py  test_dbus_service.py  test_full_calendar_screen.py  test_hierarchy.py  test_insert_child.py  test_mcp_server.py  test_migrate.py  test_models.py  test_notify.py  test_parser.py  test_scroll_sync.py  test_sessions_parser.py  test_storage.py  test_storage_lock.py  test_task_modal_navigation.py
todo/ui/: app.py  dashboard_screen.py  full_calendar_screen.py  modal.py  pomodoro.py
todo/ui/modals/: confirm_modal.py  event_modal.py  modal.py  ns_modal.py  session_modal.py
tui_md_todo.egg-info/: PKG-INFO  SOURCES.txt
